2008-09-10  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/wdt.h: Add missing comma in inline assembly for xmega
	devices.

2008-09-08  Eric B. Weddington  <eric.weddington@atmel.com>

	* xml/avrgcc-header: Fix xmega header file generation to include all
	group mask and group position definitions. Add interrupt number generation
	to xmega devices. Remove blank line from classic device generation.

2008-09-08  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iotnx61.h: Fix misspelled bit name for TCCR0B.

2008-09-07  Eric B. Weddington  <eric.weddington@atmel.com>

	* xml/avrgcc-header: Add script to convert an Atmel XML device file to a
	header file for inclusion in avr-libc.

2008-08-22  Anatoly Sokolov  <aesok@post.ru>

	* configure.ac: Add the AT43USB320 device to avr31 architecture.

2008-08-21  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for SourceForge bug #2033993.
	* doc/api/malloc.dox: Fix linker flags in description and add a note
	describing why certain linker flags have to be used.

2008-08-20  Eric B. Weddington  <eric.weddington@atmel.com>

	* libc/string/strtok.c: Fix cut and paste error with strtok 
	implementation.
	* include/string.h: Same.

2008-08-20  Shaun Jackman  <sjackman@gmail.com>
        Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #21622.
	* devtools/Architecture.am (AM_CPPFLAGS): Add -I$(top_builddir)/include
        to support building in a subdirectory.
	* devtools/Device.am (AM_CPPFLAGS): Same.

2008-08-20  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #23409.
	* include/string.h: Add prototype of new strtok function.
	* libc/string/strtok_r.S: Fix doxygen description of function.
	* libc/string/strtok.c: New file with strtok function.
	* libc/string/Files.am: Add new file to list.

2008-08-20  Eric B. Weddington  <eric.weddington@atmel.com>

	Contributed by Lars Jonsson
	Fix bug #22572.
	* doc/api/faq.dox: Add Makefile fragments for converting text and binary